Larch History
================================================================================

Version 1.0.1 (?)
  * Much more robust handling of unexpected server disconnects and dropped
    connections.
  * Fix excessive post-scan processing times for very large mailboxes.
  * Fetch message headers in blocks of up to 1024 at a time rather than all at
    once, to prevent potential problems with certain servers when a mailbox
    contains a huge number of messages.
  * Don't try to trap POSIX signals on platforms that aren't likely to support
    them, and don't die if the platform sniffing doesn't save us.
  * Add a new "insane" logging level, which will output all IMAP commands and
    responses to STDERR.

Version 1.0.0 (2009-03-17)
  * First release.