@@ -2,8 +2,10 @@ Larch History
 ================================================================================
 
 Version 1.0.1 (?)
+  * Ruby 1.9.1 support.
   * Much more robust handling of unexpected server disconnects and dropped
     connections.
+  * Option to verify server SSL certificates.
   * Fix excessive post-scan processing times for very large mailboxes.
   * Fetch message headers in blocks of up to 1024 at a time rather than all at
     once, to prevent potential problems with certain servers when a mailbox
